package edu.univalle.gadim.virtual_lab_platform.authentication.config;

import org.springframework.context.annotation.Configuration;

/**
 * Spring configuration class for the authentication module.
 *
 * <p>Provides beans and configuration for the authentication bounded context.
 * Component scanning picks up all {@code @Service}, {@code @Repository},
 * {@code @Component}, and {@code @Configuration} beans in this module's packages.
 */
@Configuration
public class AuthenticationConfig {}
