package edu.univalle.gadim.virtual_lab_platform.users.data.repository;

import edu.univalle.gadim.virtual_lab_platform.users.data.model.UserJpa;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import java.util.Optional;

/**
 * Spring Data repository for {@link UserJpa} persistence.
 *
 * <p>Provides standard CRUD operations plus a custom lookup by username.
 *
 * @see UserJpa
 */
@Repository
public interface UserRepository extends JpaRepository<UserJpa, String> {
}
